[tool.poetry]
name = "opt-benchmark"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "opt_benchmark"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
autopep8 = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
